tests/sumo/errors/routes/stops/duration_invalid/errors.sumo
Error: Invalid duration or end time is given for a stop on edge 'SC' in vehicle '0'.
